--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,69 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t "hello"
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t("hello") %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   "true": "foo"
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  languages:
+    en: "English"
+    vi: "Vietnamese"
+  errors:
+    template:
+      header:
+        one: "1 error prohibited this %{model} from being saved"
+        other: "%{count} errors prohibited this %{model} from being saved"
+
+  layouts:
+    application:
+      base_title: "Ruby on Rails Tutorial Sample App"
+
+  navbar:
+    app_name: "Sample App"
+    home: "Home"
+    help: "Help"
+    login: "Log in"
+
+  products:
+    index:
+      title: "Products"
+    attributes:
+      name: "Name"
+    create:
+      success: "Product was successfully created."
+    destroy:
+      success: "Product was successfully deleted."
+    new_product: "New product"
+    editing_product: "Editing product"
+    back_to_products: "Back to products"
+    destroy_product: "Destroy this product"
+    edit_product: "Edit this product"
+    new_product: "New product"
+    not_found: "Product not found."
+    show_product: "Show this product"
+    update:
+      success: "Product was successfully updated."
+
+  static_pages:
+    help:
+      description_html: >
+        Get help on the Ruby on Rails Tutorial at the
+        %{link1}.
+        To get help on this sample app, see the
+        %{link2}
+        book.
+      heading: "Help"
+      link1: "Rails Tutorial help page"
+      link1_url: "http://www.railstutorial.org/help"
+      link2: "Ruby on Rails Tutorial"
+      link2_url: "http://www.railstutorial.org/book"
+      title: "Help"
+    home:
+      description_html: >
+        This is the home page for the
+        %{link}
+        sample application.
+      heading: "Sample App"
+      link: "Ruby on Rails Tutorial"
+      link_url: "http://www.railstutorial.org/"
+      title: "Home"
+  
+  zones:
+    new_zone: "New zone"
+    edit_zone: "Editing zone"
+    zone_label: "Zone"
+    date_label: "Date"
