--- a/config/locales/activerecord/activerecord.en.yml
+++ b/config/locales/activerecord/activerecord.en.yml
@@ -12,6 +12,10 @@ en:
         password: "Password"
         password_confirmation: "Password Confirmation"
         date_of_birth: "Date of Birth"
+        gender:
+          male: "Nam"
+          female: "Nữ"
+          other: "Khác"
 
     errors:
       models:
