--- a/config/locales/activerecord/activerecord.en.yml
+++ b/config/locales/activerecord/activerecord.en.yml
@@ -13,6 +13,7 @@ en:
         password: "Password"
         password_confirmation: "Password Confirmation"
         date_of_birth: "Date of Birth"
+        genders: "Gender"
         gender:
           male: "Nam"
           female: "Nữ"
