--- a/config/locales/products/vi.roducts.yml
+++ b/config/locales/products/vi.roducts.yml
@@ -2,18 +2,32 @@ vi:
   products:
     index:
       title: "Sản phẩm"
-    attributes:
       name: "Tên"
+      empty: "Không có sản phẩm nào."
+      new: "Thêm sản phẩm"
+      empty: "Không có sản phẩm nào"
+    show:
+      back: "Quay lại danh sách"
+      edit: "Chỉnh sửa sản phẩm"
+      destroy: "Xóa sản phẩm"
+      confirm_destroy: "Bạn có chắc muốn xóa sản phẩm này không?"
+    new:
+      title: "Tạo sản phẩm mới"
+      back: "Quay lại danh sách"
+    edit:
+      title: "Chỉnh sửa sản phẩm"
+      show: "Xem sản phẩm này"
+      back: "Quay lại danh sách"
+    form:
+      name: "Tên"
+    actions:
+      show: "Xem"
+      edit: "Sửa"
+      destroy: "Xóa"
+      confirm_destroy: "Bạn có chắc muốn xóa sản phẩm này không?"
     create:
       success: "Tạo sản phẩm thành công."
-    destroy:
-      success: "Xóa sản phẩm thành công."
-    new_product: "Thêm sản phẩm mới"
-    editing_product: "Chỉnh sửa sản phẩm"
-    back_to_products: "Quay lại danh sách sản phẩm"
-    destroy_product: "Xóa sản phẩm này"
-    edit_product: "Chỉnh sửa sản phẩm này"
-    not_found: "Không tìm thấy sản phẩm."
-    show_product: "Xem sản phẩm này"
     update:
       success: "Cập nhật sản phẩm thành công."
+    destroy:
+      success: "Xóa sản phẩm thành công."
