--- a/config/locales/users/en.users.yml
+++ b/config/locales/users/en.users.yml
@@ -1,59 +1,13 @@
 en:
-  activerecord:
-    models:
-      user: "User"
-    attributes:
-      user:
-        name: "Name"
-        email: "Email"
-        password: "Password"
-        password_confirmation: "Password confirmation"
-        created_at: "Created at"
-        updated_at: "Updated at"
-        date_of_birth: "Date of birth"
-        gender: "Gender"
-        genders:
-          male: "Male"
-          female: "Female"
-          other: "Other"
-
-  helpers:
-    submit:
-      user:
-        create: "Create account"
-
-  views:
-    users:
-      new:
-        title: "Sign Up"
-      show:
-        title: "User Profile"
-  
-  errors:
-    template:
-      header:
-        one: "1 error prohibited this %{model} from being saved"
-        other: "%{count} errors prohibited this %{model} from being saved"
-      body: "There were problems with the following fields:"
-      
-    models:
-      user:
-        attributes:
-          name: 
-            blank: "can't be blank"
-            too_short: "is too short (minimum is %{count} characters)"
-          email:
-            blank: "can't be blank"
-            invalid: "is invalid"
-            taken: "has already been taken"
-          password:
-            blank: "can't be blank"
-            too_short: "is too short (minimum is %{count} characters)"
-          password_confirmation:
-            blank: "can't be blank"
-            confirmation: "doesn't match Password"
-          date_of_birth:
-            blank: "can't be blank"
-            invalid: "is not a valid date"
-            in_future: "can't be in the future"
-            past_100: "can't be more than 100 years ago"
+  users:
+    not_found: "User not found"
+    new:
+      title: "Sign Up"
+      confirmation: "Password Confirmation"
+      create_account: "Create Account"
+    show:
+      title: "User Information"
+      created_at: "Created At"
+      updated_at: "Updated At"
+    created: 
+      success: "User was successfully created."
