--- a/config/locales/base/base.vi.yml
+++ b/config/locales/base/base.vi.yml
@@ -18,7 +18,11 @@ vi:
     home: "Trang chủ"
     help: "Trợ giúp"
     sign_up: "Đăng kí"
-    login: "Đăng nhập"
+    log_in: "Đăng nhập"
+    account: "Tài khoản"
+    profile: "Hồ sơ"
+    settings: "Cài đặt"
+    log_out: "Đăng xuất"
 
   static_pages:
     help:
