--- a/config/locales/activerecord/activerecord.en.yml
+++ b/config/locales/activerecord/activerecord.en.yml
@@ -3,6 +3,7 @@ en:
     models:
       user: "User"
       product: "Product"
+      
     attributes:
       product:
         name: "Name"
@@ -12,6 +13,11 @@ en:
         password: "Password"
         password_confirmation: "Password Confirmation"
         date_of_birth: "Date of Birth"
+        genders: "Gender"
+        gender:
+          male: "Nam"
+          female: "Nữ"
+          other: "Khác"
 
     errors:
       models:
