--- a/config/locales/users/vi.users.yml
+++ b/config/locales/users/vi.users.yml
@@ -2,13 +2,14 @@ vi:
   users:
     show:
       not_found: "Không tìm thấy người dùng"
+      title: "Thông tin người dùng"
+      created_at: "Ngày tạo"
+      updated_at: "Cập nhật lúc"
     new:
       title: "Đăng ký tài khoản"
       confirmation: "Xác nhận mật khẩu"
       create_account: "Tạo tài khoản"
-    show:
-      title: "Thông tin người dùng"
-      created_at: "Ngày tạo"
-      updated_at: "Cập nhật lúc"
     create: 
       success: "Người dùng đã được tạo thành công."
+    edit:
+      title: "Chỉnh sửa hồ sơ của bạn"
