--- a/config/locales/base/base.vi.yml
+++ b/config/locales/base/base.vi.yml
@@ -23,7 +23,7 @@ vi:
     profile: "Hồ sơ"
     settings: "Cài đặt"
     log_out: "Đăng xuất"
-  
+    users: "Người dùng"
   time:
     formats:
       default: "%d/%m/%Y %H:%M"
