--- a/config/locales/users/en.users.yml
+++ b/config/locales/users/en.users.yml
@@ -11,6 +11,7 @@ en:
       create_account: "Create account"
     create: 
       success: "User was successfully created."
+      error: "Error!"
     edit:
       title: "Update your profile"
       submit: "Submit"
@@ -28,6 +29,7 @@ en:
     user:
       delete: "Delete"
       are_you_sure?: "Are you sure to delete this user ?"
+    not_found: "User not found"
     not_admin: "You are not authorized to perform this action."
-    please_login: "Please log in to access this page."
-    not_correct_user: "You are not authorized to view this profile."
+    check_email: "Please check your email for the activation link."
+    email_error: "There was an error sending the activation email. Please try again later."
