--- a/config/locales/users/vi.users.yml
+++ b/config/locales/users/vi.users.yml
@@ -11,6 +11,7 @@ vi:
       create_account: "Tạo tài khoản"
     create: 
       success: "Người dùng đã được tạo thành công."
+      error: "Lỗi!"
     edit:
       title: "Chỉnh sửa hồ sơ của bạn"
       submit: "Xác nhận"
@@ -28,6 +29,11 @@ vi:
     user:
       delete: "Xóa"
       are_you_sure?: "Bạn chắc chắn muốn xóa người dùng này ?"
+    not_found: "Không tìm thấy người dùng"
     not_admin: "Bạn không được phép thực hiện hành động này."
     please_login: "Vui lòng đăng nhập để truy cập trang này."
     not_correct_user: "Bạn không được phép xem hồ sơ này."
+    check_email: "Vui lòng kiểm tra email của bạn để nhận liên kết kích hoạt."
+    email_error: "Đã xảy ra lỗi khi gửi email kích hoạt. Vui lòng thử lại sau."
+    check_email: "Vui lòng kiểm tra email của bạn để nhận liên kết kích hoạt."
+    email_error: "Đã xảy ra lỗi khi gửi email kích hoạt. Vui lòng thử lại sau."
