--- a/config/locales/users/vi.users.yml
+++ b/config/locales/users/vi.users.yml
@@ -5,6 +5,9 @@ vi:
       title: "Thông tin người dùng"
       created_at: "Ngày tạo"
       updated_at: "Cập nhật lúc"
+      microposts:  
+        one: "1 bài viết"
+        other: "%{count} bài viết"
     new:
       title: "Đăng ký tài khoản"
       submit: "Xác nhận"
