--- a/config/locales/base/base.en.yml
+++ b/config/locales/base/base.en.yml
@@ -24,6 +24,58 @@ en:
     settings: "Settings"
     logout: "Logout"
     users: "Users"
+    
+  user_info:
+    profile: "View my profile"
+    micropost: "Micropost"
+    micropost_singular: "micropost"
+    micropost_plural: "microposts"
+
+  micropost_form:
+    placeholder: "Compose new micropost..."
+    submit: "Submit"
   time:
     formats:
       default: "%d/%m/%Y %H:%M"
+  datetime:
+    distance_in_words:
+      half_a_minute: "half a minute"
+      less_than_x_seconds:
+        one: "less than 1 second"
+        other: "less than %{count} seconds"
+      x_seconds:
+        one: "1 second"
+        other: "%{count} seconds"
+      less_than_x_minutes:
+        one: "less than 1 minute"
+        other: "less than %{count} minutes"
+      x_minutes:
+        one: "1 minute"
+        other: "%{count} minutes"
+      about_x_hours:
+        one: "about 1 hour"
+        other: "about %{count} hours"
+      x_hours:
+        one: "1 hour"
+        other: "%{count} hours"
+      x_days:
+        one: "1 day"
+        other: "%{count} days"
+      about_x_months:
+        one: "about 1 month"
+        other: "about %{count} months"
+      x_months:
+        one: "1 month"
+        other: "%{count} months"
+      about_x_years:
+        one: "about 1 year"
+        other: "about %{count} years"
+      x_years:
+        one: "1 year"
+        other: "%{count} years"
+      over_x_years:
+        one: "over 1 year"
+        other: "over %{count} years"
+      almost_x_years:
+        one: "almost 1 year"
+        other: "almost %{count} years"
