--- a/config/locales/microposts/micropost.en.yml
+++ b/config/locales/microposts/micropost.en.yml
@@ -11,7 +11,7 @@ en:
     posted: "Posted %{time_ago} ago"
     invalid: "Micropost is invalid."
     image_too_large: "Maximum file size is 5MB. Please choose a smaller file."
-    delete: "delete"
+    delete: "Delete"
     delete_confirm: "Are you sure you want to delete this micropost?"
 
   micropost_form:
